[project]
name = "projeto01"
version = "0.1.0"
description = ""
authors = [
    {name = "Tatiana Kami",email = "carlalimatatiana@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "streamlit-lottie (>=0.0.5,<0.0.6)"
]

[tool.poetry]
packages = [{include = "projeto01", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
